update with more recent files

--- a/make.conf
+++ b/make.conf
@@ -9,7 +9,7 @@ CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
-USE="-bindist bzip2 idm ipv6 mmx sse sse2 urandom sqlite modern-top ftp javascript libkms glamor lzo http2 -adns metalink expat d3d9 vdpau wayland clang -gles2 truetype opengl fontconfig X -fontforge xcb xkb systemd png threads ffmpeg libsamplerate dbus pulseaudio quvi mp3 x264 webp theora vorbis ogg modplug x265 xvid lzma gif sdl vpx -gles drm uchardet zsh-completion cryptsetup -sysv-utils experimental ayatana vim-syntax jit jpeg startup-notification alsa gstreamer lame opus musepack mikmod mpg123 soundcloud gme curl outputs cairo cups djvu egl nfsv41 udisks infinality squashfs mercurial abi_x86_32 sdl2 pcre16 libnotify mutt pcsx-rearmed -tyrquake -psp1 snes9x-next gtk3 libguess system-sqlite secure-delete apng s3tc staging joystick mod mad fluidsynth tahoma libass postproc svg minizip flac cg -postgres jemallow jemalloc -offensive -systemtap firmware luajit dvd virt-network gstvideo -gstaudio vulkan taglib gphoto2 chroma lastgenre discogs mpdstats ibus gnuefi -webchannel vcd -webengine -modemmanager graphite pgo lto jumbo-build vulkan-overlay raw vitstab"
+USE="-bindist bzip2 idm ipv6 mmx sse sse2 urandom sqlite modern-top ftp javascript libkms glamor lzo http2 -adns metalink expat d3d9 vdpau wayland clang -gles2 truetype opengl fontconfig X -fontforge xcb xkb systemd png threads ffmpeg libsamplerate dbus pulseaudio quvi mp3 x264 webp theora vorbis ogg modplug x265 xvid lzma gif sdl vpx -gles drm uchardet zsh-completion cryptsetup -sysv-utils experimental ayatana vim-syntax jit jpeg startup-notification alsa gstreamer lame opus musepack mikmod mpg123 soundcloud gme curl outputs cairo cups djvu egl nfsv41 udisks infinality squashfs mercurial abi_x86_32 sdl2 pcre16 libnotify mutt pcsx-rearmed -tyrquake -psp1 snes9x-next gtk3 libguess system-sqlite secure-delete apng s3tc staging joystick mod mad fluidsynth tahoma libass postproc svg minizip flac cg -postgres jemallow jemalloc -offensive -systemtap firmware luajit dvd virt-network gstvideo -gstaudio vulkan taglib gphoto2 chroma lastgenre discogs mpdstats ibus gnuefi -webchannel vcd -webengine -modemmanager graphite pgo lto -jumbo-build vulkan-overlay raw vitstab zstd lz4 colormanagement -color-management -libglvnd smartcard vhost-user-fs"
 PORTDIR="/usr/portage"
 DISTDIR="/data/build/distfiles"
 PKGDIR="/data/binarki"
@@ -25,10 +25,7 @@ PORTAGE_TMPDIR="/data/build/tmp"
 #VIDEO_CARDS="nvidia"
 VIDEO_CARDS="radeonsi amdgpu radeon r600"
 
-INPUT_DEVICES="evdev keyboard mouse wacom"
-
-# amd a10
-#CPU_FLAGS_X86="aes avx fma3 fma4 mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 xop"
+INPUT_DEVICES="libinput wacom"
 
 # ryzen 5
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
@@ -46,7 +43,4 @@ RUBY_TARGETS="ruby24 ruby25"
 
 MAKEOPTS="-j10 -l10"
 
-# temp
-#PYTHON_TARGETS="python2_7 python3_5 python3_6"
-#PYTHON_SINGLE_TARGET="python3_5"
-
+UNINSTALL_IGNORE=/usr/src
