--- a/repos.conf/layman.conf
+++ b/repos.conf/layman.conf
@@ -1,8 +1,8 @@
-[netfab]
-priority = 50
-location = /data/build/overlays/netfab
-layman-type = git
-auto-sync = Yes
+#[netfab]
+#priority = 50
+#location = /data/build/overlays/netfab
+#layman-type = git
+#auto-sync = Yes
 
 [yoshi314]
 priority = 50
